01-ClusterSetup/04-namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: eshop-resources

---
apiVersion: v1
kind: Namespace
metadata:
  name: eshop-services
