01-ClusterSetup/06.1-echo1.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: echo1-ingress
  namespace: eshop-resources
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /echo1
            pathType: Prefix
            backend:
              service:
                name: echo1-service
                port:
                  number: 80

---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: echo1
  name: echo1-service
  namespace: eshop-resources
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: echo1
  type: ClusterIP
status:
  loadBalancer: {}

---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: echo1
  name: echo1
  namespace: eshop-resources
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
        - name: echo1
          image: luizcarlosfaria/echo-server:latest
          imagePullPolicy: IfNotPresent #Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
